added git instructions

--- a/week 3.ipynb
+++ b/week 3.ipynb
@@ -2,8 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "084f503e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#learn git\n",
+    "#after any changes are saved do this:\n",
+    "#git add .\n",
+    "#git commit -m \"what you changed\n",
+    "#git push origin master\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5c6cd41",
    "metadata": {},
    "outputs": [],
    "source": []
