--- a/week 3.ipynb
+++ b/week 3.ipynb
@@ -10,14 +10,14 @@
     "#learn git\n",
     "#after any changes are saved do this:\n",
     "#git add .\n",
-    "#git commit -m \"what you changed\n",
-    "#git push origin master\""
+    "#git commit -m \"what you changed\"\n",
+    "#git push origin master"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5c6cd41",
+   "id": "81ecc737",
    "metadata": {},
    "outputs": [],
    "source": []
